--- a/Ukrain.html
+++ b/Ukrain.html
@@ -1,4 +1,4 @@
-<html lang="uk">
+<html lang="ukr">
 <head>
 <style>
 tr {
@@ -47,7 +47,7 @@ cursor:wait;
 var log =document.getElementById("login");
 var pas =document.getElementById("password");
 if ((log.value=="4moon") && (pas.value=="2021") && (codWord.value=="Chill")) {
-	alert("Наведи курсор на кота і потрапиш на прекрасний плейлист з музикою!");
+	alert("РќР°РІРµРґС–С‚СЊ РєСѓСЂСЃРѕСЂ РЅР° РєРѕС‚Р° С– РІРё РїРµСЂРµР№РґРµС‚Рµ РЅР° РїСЂРµРєСЂР°СЃРЅРёР№ РїР»РµР№Р»РёСЃС‚ РјСѓР·РёРєРё!!!");
 		
 		kot.onmouseover = function(){
 			
@@ -63,7 +63,7 @@ if ((log.value=="4moon") && (pas.value=="2021") && (codWord.value=="Chill")) {
 }
 else
 {
-	alert("Помилка при введенні логіна або пароля або кодового слова !!!");
+	alert("РќРµРїСЂР°РІРёР»СЊРЅРѕ РІРІРµРґРµРЅРёР№ Р»РѕРіС–РЅ Р°Р±Рѕ РїР°СЂРѕР»СЊ Р°Р±Рѕ РєРѕРґРѕРІРµ СЃР»РѕРІРѕ!!!");
 	}
 }
 </script>
@@ -73,7 +73,7 @@ else
 	style="width: 100%; height: 2000px; background-image: url(fon.png);"
 	id="myfon">
 
-	<img id="kot" src="kot.png" width="119" height="120" title="Чілова музика">
+	<img id="kot" src="kot.png" width="119" height="120" title="Р§С–Р»РѕРІР° РјСѓР·РёРєР°">
 	<tr>
 	<td>
 		<a href="English.html"><li>English</li>
@@ -81,7 +81,7 @@ else
 		</tr>
 		<tr>
 	<td>
-		<a href="index.html"><li>Руский</li>
+		<a href="index.html"><li>Р СѓСЃРєРёР№</li>
 			</td>
 		</tr>
 	<table border="1" align="center"
@@ -89,19 +89,19 @@ else
 
 
 		<tr>
-			<td><span> Логін:</span></td>
+			<td><span> Р›РѕРіС–РЅ:</span></td>
 			<td><input type="text" maxlength="10" id="login" /></td>
 		</tr>
 		<tr>
-			<td><span> Пароль:</span></td>
+			<td><span> РџР°СЂРѕР»СЊ:</span></td>
 			<td><input type="password" maxlength="10" id="password" /></td>
 		</tr>
 		<tr>
-			<td><span> Кодове слово:</span></td>
+			<td><span> РљРѕРґРѕРІРµ СЃР»РѕРІРѕ:</span></td>
 			<td><input type="text" maxlength="20" id="codWord" /></td>
 		</tr>
 		<tr>
-			<td><input type="button" value="Вхід" onclick="func()" /></td>
+			<td><input type="button" value="Р’С…С–Рґ" onclick="func()" /></td>
 		</tr>
 
 
