--- a/English.html
+++ b/English.html
@@ -76,14 +76,10 @@ else
 	<img id="kot" src="kot.png" width="119" height="120" title="Chill music">
 	<tr>
 	<td>
-		<a href="index.html"><li>Руский</li>
+		<a href="index.html"><li>Р СѓСЃСЃРєРёР№</li>
 			</td>
 		</tr>
-		<tr>
-	<td>
-		<a href="Ukrain.html"><li>Українська</li>
-			</td>
-		</tr>
+		
 	<table border="1" align="center"
 		style="background-color: rgb(0, 0, 255);">
 
