--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ if ((log.value=="4moon") && (pas.value=="2021") && (codWord.value=="Chill")) {
 				if (start>20)clearInterval(timer);
 				
 			},20);
-			location.replace("https://open.spotify.com/playlist/2YHJ9HYj50h5eEmSKAySCw?si=KoKcZkxMS4663y6rlpQXNw&nd=1" target="_blank");
+			location.replace("https://open.spotify.com/playlist/2YHJ9HYj50h5eEmSKAySCw?si=KoKcZkxMS4663y6rlpQXNw&nd=1");
 		
 	}
 }
